# django-typify

./: LICENSE  README.md  pyproject.toml
django_typify/: cli.py  core.py  factories.py  models.py  stubgen.py  views.py
tests/: test_relations.py  test_stubgen.py  test_views.py
