[tool.poetry]
name = "django-typify"
version = "0.1.0"
description = "Auto-generate Django model type annotations for reverse relations"
authors = ["Viktor Mirieiev <viktor.mirieiev@ut.ee>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "django_typify" }]
include = ["django_typify/py.typed"]

[tool.poetry.dependencies]
python = "^3.11"
astor = "^0.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
black = "^24.0"
isort = "^5.10"
mypy = "^1.0"

[tool.poetry.scripts]
django_typify = "django_typify.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
